y.output
   0  $accept : pddl $end

   1  pddl : '(' DEFINE domN domain ')'
   2       | '(' DEFINE probN problem ')'
   3       | plans

   4  string : STRING
   5         | AND
   6         | NOT
   7         | FORALL
   8         | EXISTS
   9         | CSTAT
  10         | DOMAIN
  11         | PROBLEM

  12  probN : '(' PROBLEM string ')'

  13  problem : '(' PDOMAIN string ')' problem
  14          | '(' INIT pPreds ')' problem
  15          | '(' OBJECTS objs ')' problem
  16          | '(' OBJECTS tObjs ')' problem
  17          | '(' GOAL goal ')'

  18  goal : '(' string ')'
  19       | '(' string gObj ')'
  20       | '(' AND mGoals ')'

  21  mGoals : mGoal
  22         | '(' NOT mGoal ')'
  23         | mGoal mGoals
  24         | '(' NOT mGoal ')' mGoals

  25  mGoal : '(' string ')'
  26        | '(' string gObj ')'

  27  gObj : string
  28       | string gObj

  29  objs : string
  30       | string objs

  31  tObjs : string '-' string
  32        | string '-' string tObjs

  33  pPreds : '(' string ')'
  34         | '(' string ')' pPreds
  35         | '(' string pPredO ')'
  36         | '(' string pPredO ')' pPreds

  37  pPredO : string
  38         | string pPredO

  39  plans : plan plans
  40        |

  41  plan : '(' string ')'
  42       | '(' string planO ')'

  43  planO : string
  44        | string planO

  45  domN : '(' DOMAIN string ')'

  46  domain : '(' REQUIREMENTS reqs ')' domain
  47         | '(' TYPES types ')' domain
  48         | '(' PREDICATES dPred ')' domain
  49         | '(' ACTION action ')' domain
  50         |

  51  reqs : req
  52       | req reqs

  53  req : REQ
  54      | CONSTRAINTS

  55  types : string
  56        | string types

  57  dPred : preds

  58  preds : '(' string ')'
  59        | '(' string ')' preds
  60        | '(' string predO ')'
  61        | '(' string predO ')' preds
  62        | '(' string predOT ')'
  63        | '(' string predOT ')' preds

  64  predO : OBJ
  65        | OBJ predO

  66  predOT : OBJ '-' string
  67         | OBJ '-' string predOT

  68  action : string PARAMETERS '(' params ')' prec EFFECT eff
  69         | string PARAMETERS '(' paramsT ')' prec EFFECT eff
  70         | string prec EFFECT eff

  71  params : OBJ
  72         | OBJ params

  73  paramsT : OBJ '-' string
  74          | OBJ '-' string paramsT

  75  prec : PRECONDITION precs
  76       | PRECONDITION '(' NOT precs ')'
  77       | PRECONDITION '(' AND mPrecs ')'
  78       |

  79  mPrecs : precs
  80         | '(' NOT precs ')'
  81         | precs mPrecs
  82         | '(' NOT precs ')' mPrecs

  83  precs : '(' string ')'
  84        | '(' string preObj ')'
  85        | '(' '=' preObj ')'

  86  preObj : OBJ
  87         | OBJ preObj

  88  eff : '(' string ')'
  89      | '(' string effObj ')'
  90      | '(' NOT '(' string ')' ')'
  91      | '(' NOT '(' string effObj ')' ')'
  92      | '(' AND mEffs ')'

  93  mEffs : mEff
  94        | '(' NOT mEff ')'
  95        | mEff mEffs
  96        | '(' NOT mEff ')' mEffs

  97  mEff : '(' string ')'
  98       | '(' string effObj ')'

  99  effObj : OBJ
 100         | OBJ effObj

state 0
	$accept : . pddl $end  (0)
	plans : .  (40)

	'('  shift 1
	$end  reduce 40

	pddl  goto 2
	plan  goto 3
	plans  goto 4


state 1
	pddl : '(' . DEFINE domN domain ')'  (1)
	pddl : '(' . DEFINE probN problem ')'  (2)
	plan : '(' . string ')'  (41)
	plan : '(' . string planO ')'  (42)

	DEFINE  shift 5
	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 14


state 2
	$accept : pddl . $end  (0)

	$end  accept


state 3
	plans : plan . plans  (39)
	plans : .  (40)

	'('  shift 15
	$end  reduce 40

	plan  goto 3
	plans  goto 16


state 4
	pddl : plans .  (3)

	.  reduce 3


state 5
	pddl : '(' DEFINE . domN domain ')'  (1)
	pddl : '(' DEFINE . probN problem ')'  (2)

	'('  shift 17
	.  error

	domN  goto 18
	probN  goto 19


state 6
	string : DOMAIN .  (10)

	.  reduce 10


state 7
	string : PROBLEM .  (11)

	.  reduce 11


state 8
	string : AND .  (5)

	.  reduce 5


state 9
	string : NOT .  (6)

	.  reduce 6


state 10
	string : FORALL .  (7)

	.  reduce 7


state 11
	string : EXISTS .  (8)

	.  reduce 8


state 12
	string : STRING .  (4)

	.  reduce 4


state 13
	string : CSTAT .  (9)

	.  reduce 9


state 14
	plan : '(' string . ')'  (41)
	plan : '(' string . planO ')'  (42)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	')'  shift 20
	.  error

	string  goto 21
	planO  goto 22


state 15
	plan : '(' . string ')'  (41)
	plan : '(' . string planO ')'  (42)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 14


state 16
	plans : plan plans .  (39)

	.  reduce 39


state 17
	probN : '(' . PROBLEM string ')'  (12)
	domN : '(' . DOMAIN string ')'  (45)

	DOMAIN  shift 23
	PROBLEM  shift 24
	.  error


state 18
	pddl : '(' DEFINE domN . domain ')'  (1)
	domain : .  (50)

	'('  shift 25
	')'  reduce 50

	domain  goto 26


state 19
	pddl : '(' DEFINE probN . problem ')'  (2)

	'('  shift 27
	.  error

	problem  goto 28


state 20
	plan : '(' string ')' .  (41)

	.  reduce 41


state 21
	planO : string .  (43)
	planO : string . planO  (44)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	')'  reduce 43

	string  goto 21
	planO  goto 29


state 22
	plan : '(' string planO . ')'  (42)

	')'  shift 30
	.  error


state 23
	domN : '(' DOMAIN . string ')'  (45)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 31


state 24
	probN : '(' PROBLEM . string ')'  (12)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 32


state 25
	domain : '(' . REQUIREMENTS reqs ')' domain  (46)
	domain : '(' . TYPES types ')' domain  (47)
	domain : '(' . PREDICATES dPred ')' domain  (48)
	domain : '(' . ACTION action ')' domain  (49)

	REQUIREMENTS  shift 33
	TYPES  shift 34
	PREDICATES  shift 35
	ACTION  shift 36
	.  error


state 26
	pddl : '(' DEFINE domN domain . ')'  (1)

	')'  shift 37
	.  error


state 27
	problem : '(' . PDOMAIN string ')' problem  (13)
	problem : '(' . INIT pPreds ')' problem  (14)
	problem : '(' . OBJECTS objs ')' problem  (15)
	problem : '(' . OBJECTS tObjs ')' problem  (16)
	problem : '(' . GOAL goal ')'  (17)

	PDOMAIN  shift 38
	INIT  shift 39
	OBJECTS  shift 40
	GOAL  shift 41
	.  error


state 28
	pddl : '(' DEFINE probN problem . ')'  (2)

	')'  shift 42
	.  error


state 29
	planO : string planO .  (44)

	.  reduce 44


state 30
	plan : '(' string planO ')' .  (42)

	.  reduce 42


state 31
	domN : '(' DOMAIN string . ')'  (45)

	')'  shift 43
	.  error


state 32
	probN : '(' PROBLEM string . ')'  (12)

	')'  shift 44
	.  error


state 33
	domain : '(' REQUIREMENTS . reqs ')' domain  (46)

	CONSTRAINTS  shift 45
	REQ  shift 46
	.  error

	reqs  goto 47
	req  goto 48


state 34
	domain : '(' TYPES . types ')' domain  (47)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 49
	types  goto 50


state 35
	domain : '(' PREDICATES . dPred ')' domain  (48)

	'('  shift 51
	.  error

	preds  goto 52
	dPred  goto 53


state 36
	domain : '(' ACTION . action ')' domain  (49)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 54
	action  goto 55


state 37
	pddl : '(' DEFINE domN domain ')' .  (1)

	.  reduce 1


state 38
	problem : '(' PDOMAIN . string ')' problem  (13)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 56


state 39
	problem : '(' INIT . pPreds ')' problem  (14)

	'('  shift 57
	.  error

	pPreds  goto 58


state 40
	problem : '(' OBJECTS . objs ')' problem  (15)
	problem : '(' OBJECTS . tObjs ')' problem  (16)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 59
	objs  goto 60
	tObjs  goto 61


state 41
	problem : '(' GOAL . goal ')'  (17)

	'('  shift 62
	.  error

	goal  goto 63


state 42
	pddl : '(' DEFINE probN problem ')' .  (2)

	.  reduce 2


state 43
	domN : '(' DOMAIN string ')' .  (45)

	.  reduce 45


state 44
	probN : '(' PROBLEM string ')' .  (12)

	.  reduce 12


state 45
	req : CONSTRAINTS .  (54)

	.  reduce 54


state 46
	req : REQ .  (53)

	.  reduce 53


state 47
	domain : '(' REQUIREMENTS reqs . ')' domain  (46)

	')'  shift 64
	.  error


state 48
	reqs : req .  (51)
	reqs : req . reqs  (52)

	CONSTRAINTS  shift 45
	REQ  shift 46
	')'  reduce 51

	reqs  goto 65
	req  goto 48


state 49
	types : string .  (55)
	types : string . types  (56)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	')'  reduce 55

	string  goto 49
	types  goto 66


state 50
	domain : '(' TYPES types . ')' domain  (47)

	')'  shift 67
	.  error


state 51
	preds : '(' . string ')'  (58)
	preds : '(' . string ')' preds  (59)
	preds : '(' . string predO ')'  (60)
	preds : '(' . string predO ')' preds  (61)
	preds : '(' . string predOT ')'  (62)
	preds : '(' . string predOT ')' preds  (63)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 68


state 52
	dPred : preds .  (57)

	.  reduce 57


state 53
	domain : '(' PREDICATES dPred . ')' domain  (48)

	')'  shift 69
	.  error


state 54
	action : string . PARAMETERS '(' params ')' prec EFFECT eff  (68)
	action : string . PARAMETERS '(' paramsT ')' prec EFFECT eff  (69)
	action : string . prec EFFECT eff  (70)
	prec : .  (78)

	PARAMETERS  shift 70
	PRECONDITION  shift 71
	EFFECT  reduce 78

	prec  goto 72


state 55
	domain : '(' ACTION action . ')' domain  (49)

	')'  shift 73
	.  error


state 56
	problem : '(' PDOMAIN string . ')' problem  (13)

	')'  shift 74
	.  error


state 57
	pPreds : '(' . string ')'  (33)
	pPreds : '(' . string ')' pPreds  (34)
	pPreds : '(' . string pPredO ')'  (35)
	pPreds : '(' . string pPredO ')' pPreds  (36)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 75


state 58
	problem : '(' INIT pPreds . ')' problem  (14)

	')'  shift 76
	.  error


state 59
	objs : string .  (29)
	objs : string . objs  (30)
	tObjs : string . '-' string  (31)
	tObjs : string . '-' string tObjs  (32)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	'-'  shift 77
	')'  reduce 29

	string  goto 78
	objs  goto 79


state 60
	problem : '(' OBJECTS objs . ')' problem  (15)

	')'  shift 80
	.  error


state 61
	problem : '(' OBJECTS tObjs . ')' problem  (16)

	')'  shift 81
	.  error


state 62
	goal : '(' . string ')'  (18)
	goal : '(' . string gObj ')'  (19)
	goal : '(' . AND mGoals ')'  (20)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 82
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 83


state 63
	problem : '(' GOAL goal . ')'  (17)

	')'  shift 84
	.  error


state 64
	domain : '(' REQUIREMENTS reqs ')' . domain  (46)
	domain : .  (50)

	'('  shift 25
	')'  reduce 50

	domain  goto 85


state 65
	reqs : req reqs .  (52)

	.  reduce 52


state 66
	types : string types .  (56)

	.  reduce 56


state 67
	domain : '(' TYPES types ')' . domain  (47)
	domain : .  (50)

	'('  shift 25
	')'  reduce 50

	domain  goto 86


state 68
	preds : '(' string . ')'  (58)
	preds : '(' string . ')' preds  (59)
	preds : '(' string . predO ')'  (60)
	preds : '(' string . predO ')' preds  (61)
	preds : '(' string . predOT ')'  (62)
	preds : '(' string . predOT ')' preds  (63)

	OBJ  shift 87
	')'  shift 88
	.  error

	predO  goto 89
	predOT  goto 90


state 69
	domain : '(' PREDICATES dPred ')' . domain  (48)
	domain : .  (50)

	'('  shift 25
	')'  reduce 50

	domain  goto 91


state 70
	action : string PARAMETERS . '(' params ')' prec EFFECT eff  (68)
	action : string PARAMETERS . '(' paramsT ')' prec EFFECT eff  (69)

	'('  shift 92
	.  error


state 71
	prec : PRECONDITION . precs  (75)
	prec : PRECONDITION . '(' NOT precs ')'  (76)
	prec : PRECONDITION . '(' AND mPrecs ')'  (77)

	'('  shift 93
	.  error

	precs  goto 94


state 72
	action : string prec . EFFECT eff  (70)

	EFFECT  shift 95
	.  error


state 73
	domain : '(' ACTION action ')' . domain  (49)
	domain : .  (50)

	'('  shift 25
	')'  reduce 50

	domain  goto 96


state 74
	problem : '(' PDOMAIN string ')' . problem  (13)

	'('  shift 27
	.  error

	problem  goto 97


state 75
	pPreds : '(' string . ')'  (33)
	pPreds : '(' string . ')' pPreds  (34)
	pPreds : '(' string . pPredO ')'  (35)
	pPreds : '(' string . pPredO ')' pPreds  (36)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	')'  shift 98
	.  error

	string  goto 99
	pPredO  goto 100


state 76
	problem : '(' INIT pPreds ')' . problem  (14)

	'('  shift 27
	.  error

	problem  goto 101


state 77
	tObjs : string '-' . string  (31)
	tObjs : string '-' . string tObjs  (32)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	.  error

	string  goto 102


state 78
	objs : string .  (29)
	objs : string . objs  (30)

	DOMAIN  shift 6
	PROBLEM  shift 7
	AND  shift 8
	NOT  shift 9
	FORALL  shift 10
	EXISTS  shift 11
	STRING  shift 12
	CSTAT  shift 13
	')'  reduce 29

	string  goto 78
	objs  goto 79


state 79
	objs : string objs .  (30)

	.  reduce 30


state 80
	problem : '(' OBJECTS objs ')' . problem  (15)

	'('  shift 27
	.  error

	problem  goto 103


state 81
	problem : '(' OBJECTS tObjs ')' . problem  (16)

	'('  shift 27
	.  error
